# poly2tri

./: CMakeLists.txt
common/: shapes.cc  shapes.h
lib/: poly2tri.lib  poly2trid.lib
sweep/: sweep.cc
